# splice-alt

./: .gitignore  README.md  install.sh
backend/: Cargo.toml
backend/src/: db.rs  main.rs  metadata.rs  watcher.rs
frontend/: README.md  background.js  content.js  manifest.json  package.sh  popup.html  popup.js
