[package]
name = "splice-alt-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6.1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0" 