[package]
name = "splice-alt-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6.1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
daemonize = "0.5"
nix = { version = "0.27", features = ["process", "signal"] }
# Code review suggestions
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
console = "0.15"

[dev-dependencies]
tempfile = "3.8"
